yaml/2-Traefik/traefik-internal-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v1.7
          name: traefik-ingress-lb
          volumeMounts:
            - mountPath: /config
              name: config
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: admin
              containerPort: 8080
          args:
            - --api
            - --kubernetes
            - --configfile=/config/traefik.toml
          livenessProbe:
            httpGet:
              path: /ping
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 1
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: k8s-app
                      operator: In
                      values:
                        - traefik-ingress-lb
                topologyKey: kubernetes.io/hostname
      volumes:
        - name: config
          configMap:
            name: traefik-conf
