yaml/2-Traefik/animals-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: animals
  namespace: amd64default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: animals.traefik
      http:
        paths:
          - path: /bear
            backend:
              serviceName: bear
              servicePort: 80
          - path: /moose
            backend:
              serviceName: moose
              servicePort: 80
          - path: /hare
            backend:
              serviceName: hare
              servicePort: 80
